# oracle-fake-client

./: AUTHORS  CMakeLists.txt  README  oracle-fake-client.spec  oracle-fake-lib.cpp  rpmlintrc
